# zoom-chef

./: .gitignore  CMakeCache.txt  CMakeLists.txt
interface/: CMakeLists.txt
interface/00-simple_panda/: 00-simple_panda.html  CMakeLists.txt  controller.cpp  keys.h  launch.sh  panda_arm_hand.urdf  simviz.cpp  world_panda_gripper.urdf
interface/zoom-chef/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  controller.cpp  simviz.cpp  spatula.urdf  world_panda_gripper.urdf
zoom-chef/: CMakeLists.txt  bottom_bun.urdf  burger.urdf  cheese.urdf  controller.cpp  lettuce.urdf  mmp_panda.urdf  simviz.cpp  spatula.urdf  tomato.urdf  top_bun.urdf  world_panda_gripper.urdf
zoom-chef/test_objects/meshes/visual/: ground.mtl
